[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/2D/entities/spider/spider-spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Entities/Spider/Spidershade.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Entities/Spider/Spider.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/AnimatedBar/AnimatedBar.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
resource_name = "attacking"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ), Vector2( 6, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "take_damage"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "flash"
}, {
"args": [  ],
"method": "unflash"
}, {
"args": [  ],
"method": "flash"
}, {
"args": [  ],
"method": "unflash"
} ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 47.0106

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 6 )

[node name="Spider" type="KinematicBody2D"]
collision_layer = 64
script = ExtResource( 3 )
speed = 35
power = 10

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -10.0
margin_top = 16.0
margin_right = 9.0
margin_bottom = 19.0

[node name="Shade" type="Sprite" parent="."]
position = Vector2( 0, 10 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
hframes = 7
vframes = 7
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attacking = SubResource( 2 )
anims/idle = SubResource( 1 )

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="."]
anims/take_damage = SubResource( 5 )

[node name="TargetDetector" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetDetector"]
position = Vector2( -1, 5 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 9 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="TargetDetector" to="." method="_on_TargetDetector_body_entered"]
